Generé la estructura base

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="nav-container">
                <ul class="displayflex">
                    <li>
-
+                        <a href=""></a>
                    </li>
                    <li>
-
+                        <a href=""></a>
                    </li>
                    <li>
-                       
+                        <a href=""></a>
                    </li>
                </ul>
             </div>
@@ -35,11 +35,11 @@
 
         <div class="central-panel">
             <div class="generator displayflex">
-                <header>
+                <header class="header-generator">
                 </header>
-                <main>
+                <main class="main-generator">
                 </main>
-                <footer> 
+                <footer class="footer-generator"> 
                 </footer>
             </div>
         </div>
