--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor de memes</title>
     <script src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/fc93a7f461.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section class="container">
-      <main class="displayflex">
-        <header>
-            <div class="title">
-                <h1>Generador de Memes</h1>
+    <section class="container displayflex">
+      <main class="main displayflex">
+        <header class="header-container displayflex">
+            <div class="title displayflex">
+                <h1 class="title-h1">Generador de Memes</h1>
             </div>
         </header>
 
         <nav> 
-            <div class="nav-container">
+            <div class="nav">
                <ul class="displayflex">
                    <li>
-                        <a href=""></a>
+                        <i class="far fa-file-image"></i> Imagen
                    </li>
                    <li>
-                        <a href=""></a>
+                        <i class="fas fa-font"></i> Texto
                    </li>
                    <li>
-                        <a href=""></a>
+                        <i class="far fa-lightbulb"></i> Modo oscuro
                    </li>
                </ul>
             </div>
