Agregué estilos al panel central

--- a/index.html
+++ b/index.html
@@ -36,20 +36,27 @@
 
         <div class="central-panel">
             <div class="generator displayflex">
-                <header class="header-generator">
+                <header class="header-generator displayflex">
+                    <h1 class="title-top">TOP TEXT</h1>
                 </header>
                 <main class="main-generator">
                 </main>
-                <footer class="footer-generator"> 
+                <footer class="footer-generator displayflex"> 
+                    <h1 class="title-bottom">BOTTOM TEXT</h1>
                 </footer>
             </div>
+
+            <button class="download"><i class="fas fa-download"></i> Descargar meme </button>
         </div>
+
+       
       </main>
 
-      <div class="right-panel">
+      <aside>
+        <div class="right-panel">
 
-      </div>
-
+        </div>
+     </aside>
 
     </section>
 </body>
