Agregué inputs en el panel de imagen

--- a/index.html
+++ b/index.html
@@ -52,8 +52,27 @@
        
       </main>
 
-      <aside>
-        <div class="right-panel">
+      <aside class="displayflex">
+        <div id="img-panel">
+            <div class="title-img displayflex">
+                <h3>IMAGEN</h3>
+            </div>
+
+            <h5>URL</h5>
+            <input type="url" class=""> 
+ 
+            <h5>FONDO</h5>
+            <div class="color-list">
+                <input type="color" value="#FFFFFF"> 
+                <select name="fondo" id="fondo">
+                    <option value="">Ninguno</option>
+                    <option value="">Aclarar</option>
+                    <option value="">Oscurecer</option>
+                    <option value="">Diferencia</option>
+                    <option value="">Luminosidad</option>
+                    <option value="">Multiplicar</option>
+                </select>
+            </div>
 
         </div>
      </aside>
