--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="nav">
                <ul class="displayflex">
                    <li>
-                        <i class="far fa-file-image"></i> Imagen
+                        <a href="" class="boton-img"><i class="far fa-file-image"></i> Imagen </a>
                    </li>
                    <li>
-                        <i class="fas fa-font"></i> Texto
+                        <a href="" class=""><i class="fas fa-font"></i> Texto </a>
                    </li>
                    <li>
-                        <i class="far fa-lightbulb"></i> Modo oscuro
+                        <a href=""><i class="far fa-lightbulb"></i> Modo oscuro </a>
                    </li>
                </ul>
             </div>
@@ -53,28 +53,86 @@
       </main>
 
       <aside class="displayflex">
-        <div id="img-panel">
+        <!-----------BOTON PARA MOBILE
+        <button><i class="fas fa-times"></i></button>
+        -->
+        <section id="img-panel">
             <div class="title-img displayflex">
                 <h3>IMAGEN</h3>
             </div>
 
-            <h5>URL</h5>
-            <input type="url" class=""> 
+            <div class="url-img displayflex">
+                <label for="url"><strong> URL</strong></label>
+                <input type="url" class="">
+            </div> 
  
-            <h5>FONDO</h5>
-            <div class="color-list">
-                <input type="color" value="#FFFFFF"> 
-                <select name="fondo" id="fondo">
-                    <option value="">Ninguno</option>
-                    <option value="">Aclarar</option>
-                    <option value="">Oscurecer</option>
-                    <option value="">Diferencia</option>
-                    <option value="">Luminosidad</option>
-                    <option value="">Multiplicar</option>
-                </select>
+            <div class="fondo-img displayflex">
+                <label for="fondo"><strong> FONDO</strong></label>
+
+                <div class="color-list displayflex">
+                    <div class="color displayflex">
+                        <input type="color" value="#FFFFFF"> 
+                        <span class="color-text">#FFFFFF</span>
+                    </div>
+                    <select name="fondo" id="fondo">
+                        <option value="">Ninguno</option>
+                        <option value="">Aclarar</option>
+                        <option value="">Oscurecer</option>
+                        <option value="">Diferencia</option>
+                        <option value="">Luminosidad</option>
+                        <option value="">Multiplicar</option>
+                    </select>
+                </div>
             </div>
 
-        </div>
+            <div class="filtros-img displayflex">
+                <label for="filtros"><strong>FILTROS</strong> </label>
+
+                <div class="brillo displayflex filtros">
+                    <label for="brillo">BRILLO</label>
+                    <input type="range" name="brillo" id="">
+                </div>
+                <div class="opacidad displayflex filtros">
+                    <label for="brillo">OPACIDAD</label>
+                    <input type="range" name="opacidad" id="">
+                </div>
+                <div class="contraste displayflex filtros">
+                    <label for="brillo">CONTRASTE</label>
+                    <input type="range" name="contraste" id="">
+                </div>
+                <div class="desenfoque displayflex filtros">
+                    <label for="desenfoque">DESENFOQUE</label>
+                    <input type="range" name="desenfoque" id="">
+                </div>
+                <div class="escala displayflex filtros">
+                    <label for="escala">ESCALA DE GRISES</label>
+                    <input type="range" name="escala" id="">
+                </div>
+                <div class="sepia displayflex filtros">
+                    <label for="sepia">SEPIA</label>
+                    <input type="range" name="sepia" id="">
+                </div>
+                <div class="hue displayflex filtros">
+                    <label for="hue">HUE</label>
+                    <input type="range" name="hue" id="">
+                </div>
+                <div class="saturado displayflex filtros">
+                    <label for="saturado">SATURADO</label>
+                    <input type="range" name="saturado" id="">
+                </div>
+                <div class="negativo displayflex filtros">
+                    <label for="negativo">NEGATIVO</label>
+                    <input type="range" name="negativo" id="">
+                </div>
+
+            </div>
+        </section>
+
+        <section class="text-panel">
+
+        </section>
+
+        <button class="reestablecer"> Reestablecer filtros </button>
      </aside>
 
     </section>
