--- a/index.html
+++ b/index.html
@@ -58,17 +58,16 @@
         -->
         <section id="img-panel">
             <div class="title-img displayflex">
-                <h3>IMAGEN</h3>
+                <h2>IMAGEN</h2>
             </div>
 
             <div class="url-img displayflex">
-                <label for="url"><strong> URL</strong></label>
+                <h3>URL</h3>               
                 <input type="url" class="">
             </div> 
  
             <div class="fondo-img displayflex">
-                <label for="fondo"><strong> FONDO</strong></label>
-
+                <h3>FONDO</h3>
                 <div class="color-list displayflex">
                     <div class="color displayflex">
                         <input type="color" value="#FFFFFF"> 
@@ -86,8 +85,7 @@
             </div>
 
             <div class="filtros-img displayflex">
-                <label for="filtros"><strong>FILTROS</strong> </label>
-
+                <h3>FILTROS</h3>
                 <div class="brillo displayflex filtros">
                     <label for="brillo">BRILLO</label>
                     <input type="range" name="brillo" id="">
@@ -128,7 +126,52 @@
             </div>
         </section>
 
-        <section class="text-panel">
+        <section class="text-panel displayflex column">
+            <div class="title-text displayflex">
+                <h2>TEXTO</h2>
+            </div>
+
+            <div class="superior-text displayflex column">
+                <h3>SUPERIOR</h3>
+                <textarea class="control-text" name="superior" id="">TOP TEXT</textarea>
+            </div>
+            <div class="sin-texto-superior displayflex">
+                <input type="checkbox" name="superior" id="textoSuperior"> 
+                <label for="">Sin texto superior</label>
+            </div>
+
+            <div class="inferior-text displayflex column">
+                <h3>INFERIOR</h3>
+                <textarea class="control-text" name="inferior" id="">BOTTOM TEXT</textarea>
+            </div>
+            <div class="sin-texto-inferior displayflex">
+                <input type="checkbox" name="inferior" id="textoInferior"> 
+                <label for="">Sin texto inferior</label>
+            </div>
+
+            <div class="fuente-texto displayflex column">
+                <h3>FUENTE</h3>
+                <select class="control-text" name="fuentes" id="">
+                    <option value="roboto">Roboto</option>
+                    <option value="open sans">Open Sans</option>
+                    <option value="montserrat">Montserrat</option>
+                    <option value="oswald">Oswald</option>
+                    <option value="rubik">Rubik</option>
+                    <option value="mukta">Mukta</option>
+                    <option value="inter">Inter</option>
+                    <option value="source code pro">Source Code Pro</option>
+                </select>
+                <div class="estilos-fuente displayflex">
+                    <div class="font-size">
+                        <input class="control-text tamanio-fuente" type="number" name="tamanio" id="tamanio-fuente" min="12" value="40">
+                    </div>
+                    <div class="font-size">
+                        <button class="control-text boton-size"><i class="fas fa-align-left"></i></button>
+                        <button class="control-text boton-size"><i class="fas fa-align-center"></i></button>
+                        <button class="control-text boton-size"><i class="fas fa-align-right"></i></button>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
