--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <div class="header-generator displayflex">
               <h1 class="title-top">TOP TEXT</h1>
             </div>
-            <div class="main-generator"></div>
+            <div class="main-generator">
+              <img src="" alt="">
+            </div>
             <div class="footer-generator displayflex">
               <h1 class="title-bottom">BOTTOM TEXT</h1>
             </div>
@@ -159,9 +161,8 @@
 
           <div class="superior-text displayflex column">
             <h3>SUPERIOR</h3>
-            <textarea class="control-text" name="superior" id="">
-TOP TEXT</textarea
-            >
+            <textarea class="control-text" name="superior" id="top-text">
+TOP TEXT</textarea>
           </div>
           <div class="sin-texto-superior displayflex">
             <input type="checkbox" name="superior" id="textoSuperior" />
@@ -170,9 +171,8 @@ TOP TEXT</textarea
 
           <div class="inferior-text displayflex column">
             <h3>INFERIOR</h3>
-            <textarea class="control-text" name="inferior" id="">
-BOTTOM TEXT</textarea
-            >
+            <textarea class="control-text" name="inferior" id="bottom-text">
+BOTTOM TEXT</textarea>
           </div>
           <div class="sin-texto-inferior displayflex">
             <input type="checkbox" name="inferior" id="textoInferior" />
@@ -181,26 +181,21 @@ BOTTOM TEXT</textarea
 
           <div class="fuente-texto displayflex column">
             <h3>FUENTE</h3>
-            <select class="control-text" name="fuentes" id="">
-              <option value="roboto">Roboto</option>
-              <option value="open sans">Open Sans</option>
-              <option value="montserrat">Montserrat</option>
-              <option value="oswald">Oswald</option>
-              <option value="rubik">Rubik</option>
-              <option value="mukta">Mukta</option>
-              <option value="inter">Inter</option>
-              <option value="source code pro">Source Code Pro</option>
+            <select class="control-text" name="fuentes" id="select-fuente">
+              <option value="'Roboto'">Roboto</option>
+              <option value="'Open Sans'">Open Sans</option>
+              <option value="'Montserrat'">Montserrat</option>
+              <option value="Oswald">Oswald</option>
+              <option value="Rubik">Rubik</option>
+              <option value="'Mukta'">Mukta</option>
+              <option value="Inter">Inter</option>
+              <option value="Source Code Pro">Source Code Pro</option>
             </select>
             <div class="estilos-fuente displayflex">
               <div class="font-size">
                 <input
-                  class="control-text tamanio-fuente"
-                  type="number"
-                  name="tamanio"
-                  id="tamanio-fuente"
-                  min="12"
-                  value="40"
-                />
+                  class="control-text tamanio-fuente" type="number"
+                  name="tamanio" id="tamanio-fuente" min="12" value="40"/>
               </div>
               <div class="font-size">
                 <button class="control-text boton-size">
@@ -221,20 +216,20 @@ BOTTOM TEXT</textarea
               <div class="color-list displayflex column">
                 <h3>COLOR</h3>
                 <div class="color-input-texto displayflex">
-                  <input type="color" value="#000000" />
+                  <input type="color" value="#000000" id="color-fuente"/>
                   <span class="color-text">#000000</span>
                 </div>
               </div>
               <div class="color-list displayflex column">
                 <h3>FONDO</h3>
                 <div class="color-input-texto displayflex">
-                  <input type="color" value="#FFFFFF" />
+                  <input type="color" value="#FFFFFF" id="color-fondo"/>
                   <span class="color-text">#FFFFFF</span>
                 </div>
               </div>
             </div>
             <div class="displayflex fondo-transparente">
-              <input type="checkbox" name="fondo transparente" id="" />
+              <input type="checkbox" name="fondo transparente" id="fondo-transparente" />
               <label for="fondo-transparente">Fondo transparente</label>
             </div>
           </div>
