--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <i class="fas fa-font"></i> Texto
             </button>
             <button class="btn-nav" id="boton-modo">
-              <i class="far fa-lightbulb"></i><span class="texto-modo">Modo oscuro</span> 
+              <i class="far fa-lightbulb"></i><span class="texto-modo">Modo claro</span> 
             </button>
           </nav>
         </header>
