Funcionalidad de input type file

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             <h3>URL</h3>
             <input type="url" id="url-img" class="control-text" />
           </div>
+          <div class="column">
+            <h3>CARGAR IMAGEN</h3>
+            <input type="file" id="file-img" class="" />
+          </div>
 
           <div class="column">
             <h3>FONDO</h3>
